[tool.poetry]
name = "sdss-hartmannActor"
version = "2.0.2-alpha.0"
description = "An actor to analyse hartmann images and apply corrections."
authors = ["John Parejko <parejkoj@uw.edu>"]
maintainers = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/hartmannActor"
repository = "https://github.com/sdss/hartmannActor"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "hartmannActor", from = "python" }
]
include = ["python/hartmannActor/etc/*"]

[tool.poetry.dependencies]
python = "^3.7,<4.0"
numpy = ">=1.17.0"
fitsio = "^1.0.5"
scipy = "^1.4.1"
astropy = "^4.0"
matplotlib = "^3.1.2"
sdss-actorcore = "^5.0.2"
sdsstools = ">=0.4.10"

[tool.poetry.dev-dependencies]
ipython = [
    {version = ">=8.0.0rc1", python = ">=3.8", allow-prereleases = true},
    {version = ">=7.0.0", python = ">=3.7,<3.8"}
]
invoke = ">=1.3.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-cov = ">=2.8.1"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
toml = ">=0.10.0"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.poetry.scripts]
hartmannActor = 'hartmannActor.hartmann:run_actor'

[tool.black]
line-length = 88
target-version = ['py39']
fast = true
exclude = [
    "tests/actorkeys"
]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "hartmannActor"
known_typing = ["typing"]
known_sdss = ["sdsstools", "actorcore", "opscore"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov hartmannActor --cov-report xml --cov-report html --cov-report term"

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=49.6.0"]
build-backend = "poetry.core.masonry.api"
