[tool.poetry]
name = "sdss-hartmannActor"
version = "3.0.0-beta.1"
description = "An actor to analyse hartmann images and apply corrections."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>", "John Parejko <parejkoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/hartmannActor"
repository = "https://github.com/sdss/hartmannActor"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "hartmann", from = "python" }
]
include = ["python/hartmann/etc/*"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.20.0"
scipy = "^1.8.0"
astropy = "^5.0"
sdsstools = ">=0.5.0"
sdss-clu = "^1.6.2"
click-default-group = "^1.2.2"
pandas = "^1.4.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
invoke = ">=1.3.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-cov = ">=2.8.1"
pytest-sugar = ">=0.9.2"
pytest-asyncio = ">=0.19.0"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
toml = ">=0.10.0"
black = {version = ">=21.7b0", allow-prereleases = true}

[tool.poetry.group.docs.dependencies]
rstcheck = ">=3.3.1"
Sphinx = ">=3.0.0"
sphinx-click = ">=2.6.0"
sphinx-jsonschema = ">=1.16.7"
myst-parser = ">=0.14.0"
furo = ">=2021.6.18-beta.36"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.3.3"

[tool.poetry.scripts]
hartmann = 'hartmann.__main__:hartmann'

[tool.black]
line-length = 88
target-version = ['py39']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "hartmann"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov hartmann --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__main__.py",
    "*/calibration.py"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
